* 2013-08-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 28163: Implicitly remove alpha channel when transforming to JPEG
 - Fix for bug 27176: Don't query user service unless needed, don't evaluate global addressbook permissions repeatedly

* 2013-08-20 - thorben.betten@open-xchange.com

 - Fix for bug 28368: Ignore possibly contained <p> tag in image's binary data
 - Preparation to fix bug 28163: Don't perform any image transformation if not needed as signaled by URL parameters and/or image type

* 2013-08-19 - thorben.betten@open-xchange.com

 - Fix for bug 24629: Preload folder names on root subfolder retrieval
 - Fix for bug 28381: Display appropriate warning in case folder owner's admin permission is auto-restored
 - Fix for bug 28397: Fixed possible ArrayIndexOutOfBoundsException while listing folders

* 2013-08-16 - jan.bauerdick@open-xchange.com

 - Fix for bug 28350: Check if another distribution list with same name already exists

* 2013-08-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 28317: Invalidate all other user sessions after password change

* 2013-08-15 - marcus.klein@open-xchange.com

 - Fix for bug 28283: Need to poll the system bundle to check if shutdown was successful and extended scripting for calling shutdown process
   to reduce error output.

* 2013-08-15 - tobias.friedrich@open-xchange.com

 - Fix for bug 28260: Restrict socket binding to local loopback address only by default. 

* 2013-08-15 - thorben.betten@open-xchange.com

 - Fix for bug 28026: Allowing relative URL paths specified as a UWA widget's source URL

* 2013-08-14 - marcus.klein@open-xchange.com

 - Fix for bug 28272: Extended new graceful shutdown method with necessary checks prior to executing it.
 - Fix for bug 23141: Terminate OSGi framework and backend gracefully allowing components to remove their temporary things.
   Removing temporary files during startup because of maybe died JVM.

* 2013-08-14 - thorben.betten@open-xchange.com
