@@ -136,6 +136,7 @@ public class AppointmentBugTestSuite extends TestSuite {
         tests.addTestSuite(Bug21620Test.class);
         tests.addTestSuite(Bug24502Test.class);
         tests.addTestSuite(Bug26842Test.class);
+        tests.addTestSuite(Bug26350Test.class);
 		return tests;
 	}
 }
