@@ -1,3 +1,7 @@
+* 2013-08-20 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 26350: Many calendar deletes in a multiple request lead to database deadlocks.
+
 * 2013-08-20 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 28163: Implicitly remove alpha channel when transforming to JPEG
